# FunctionSplitter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  main.py  pyproject.toml
function_splitter/: __init__.py  _config.py  _transaction.py  main.py
function_splitter/exceptions/: __init__.py  _not_able2split_exception.py
function_splitter/modify_file/: __init__.py  _function2template_method.py  _get_long_functions.py  _modify_file.py
function_splitter/modify_file/_split_long_function/: __init__.py  _split_long_function.py  _template_method.py  _template_method_creator.py
function_splitter/modify_file/_split_long_function/_template_method_creator/: __init__.py  _example.py  _one_shot_creator.py  _step_by_step_creator.py  _template_method_creator.py  _template_method_creator_factory.py  _template_method_creators.py
function_splitter/modify_file/split_long_function/: __init__.py  _convert_self2name.py  _split_long_function.py
function_splitter/modify_file/split_long_function/template_method_components/: __init__.py  _base_method_description.py  _constructor.py  _field.py  _main_method.py  _method.py  _template_method.py
function_splitter/modify_file/split_long_function/template_method_creator/: __init__.py  _constructor_fields_extractor.py  _full_one_shot_creator.py  _get_constructor_and_fields.py  _multistep_creator.py  _step_by_step_creator.py  _template_method_creator.py  _template_method_creator_factory.py  _variable_name_replacer.py
tests/: test_variable_name_replacer.py
(+9 files in other folders)
